k8s-master/kubernetes-course-files/Others/NetworkPolicies/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: app
        resources:
          limits:
            memory: 170Mi
          requests:
            cpu: 100m
            memory: 70Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: appservice
  namespace: default
spec:
  selector:
    app: app
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
