k8s-master/kubernetes-course-files/Others/NetworkPolicies/app_networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: appnetworkpolicy
  namespace: default
spec:
 policyTypes:
 - Ingress
 ingress:
 - from:
   - podSelector:
       matchLabels:
         app: web
 podSelector:
   matchLabels:
      app: app
